##################################################################################
#
# Copyright (c) 2019 Research Institute for Information Technology, Kyushu university
# All rights researved.
#
##################################################################################

# Install files

install(FILES
        npt2scat.py
        DESTINATION pt_tool
)
