##################################################################################
#
# Copyright (c) 2019-2020 Research Institute for Information Technology, Kyushu university
# All rights researved.
#
##################################################################################

# Install files

install(FILES
        xpt2scat.py
        scat2scab.py
        DESTINATION pt_tool
)
